monitoring/alertmanager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
  - port: 9093
    targetPort: 9093
